--- a/NSDWeather/Base.lproj/Main.storyboard
+++ b/NSDWeather/Base.lproj/Main.storyboard
@@ -22,8 +22,9 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ou2-ay-I2o">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="717"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sunshine" translatesAutoresizingMaskIntoConstraints="NO" id="seK-Ig-xok">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sunshine" translatesAutoresizingMaskIntoConstraints="NO" id="seK-Ig-xok">
                                                 <rect key="frame" x="0.0" y="0.0" width="320" height="283"/>
+                                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="283" id="LGQ-CW-EZt"/>
                                                 </constraints>
@@ -52,11 +53,11 @@
                                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                 <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="10" maxY="0.0"/>
-                                                                <state key="normal" title="+">
+                                                                <state key="normal" title="-">
                                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                 </state>
-                                                                <state key="selected" title="-"/>
+                                                                <state key="selected" title="+"/>
                                                                 <connections>
                                                                     <action selector="didPressExpandButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="lX6-8Q-XoN"/>
                                                                 </connections>
@@ -198,11 +199,11 @@
                                                                 <rect key="frame" x="8" y="10" width="304" height="30"/>
                                                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                 <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="10" maxY="0.0"/>
-                                                                <state key="normal" title="+">
+                                                                <state key="normal" title="-">
                                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                 </state>
-                                                                <state key="selected" title="-"/>
+                                                                <state key="selected" title="+"/>
                                                                 <connections>
                                                                     <action selector="didPressExpandButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="A96-eR-H6o"/>
                                                                 </connections>
@@ -224,7 +225,7 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yQp-nL-lqZ">
                                                         <rect key="frame" x="0.0" y="50" width="160" height="167"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Daytime" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wi0-3J-Rg4">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wi0-3J-Rg4">
                                                                 <rect key="frame" x="8" y="8" width="144" height="21"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="21" id="Nmk-Ua-osd"/>
